# talesrunner-fishing-notification

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  app.py  core.py  index.py  pyproject.toml  requirements-pi.txt  requirements.txt  talesrunner.spec  test_discord.py  test_ocr.py  test_telegram.py
gui/: __init__.py  calibration_tab.py  monitor_tab.py  roi_tab.py  settings_tab.py  setup_tab.py
